--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,9 @@ rvm:
   - 2.0
   - 2.1
 notifications:
-  irc:
-    channels:
-      - "chat.freenode.net#sensu"
-    on_success: change
-    on_failure: always
   email:
     recipients:
-      - mattjones@yieldbot.com
+      - sensu-plugin@sensu-plugin.io
     on_success: change
     on_failure: always
 
