--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ deploy:
     secure: AYgDVEqqT4fU2NLdz5HGn1wKX4fR82yuPWy9B5wv3E2KznCVMPMUYgcUwcIET53T3kt6LP5VMK5l3VumBa143j+9EL1wlv6uUsp1BHERr1hK/ahxMmT9+G32O11sWbNIPbsVb68ZhgRisI3ouLAZTMyO5/EdHYli1DygZPR/v3A=
   gem: sensu-plugins-rspec
   on:
-    ags: true
+    tags: true
     all_branches: true
     rvm: 1.9.3
     rvm: 2.0
